--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "host-checker",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A package for host check.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node example.js"
   },
   "repository": {
     "type": "git",
